--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,23 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="https://www.pokerbaazi.com/templates/assets/favicon/apple-touch-icon.png?v=Lbx4w5Kd6z"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://www.pokerbaazi.com/templates/assets/favicon/favicon-32x32.png?v=Lbx4w5Kd6z"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://www.pokerbaazi.com/templates/assets/favicon/favicon-16x16.png?v=Lbx4w5Kd6z"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
